--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ig_webhook",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-     "@aws-sdk/client-dynamodb": "^3.817.0",
+    "@aws-sdk/client-dynamodb": "^3.817.0",
     "@aws-sdk/lib-dynamodb": "^3.817.0"
   }
 }
